--- a/_httpd/conf.d-icons.conf
+++ b/_httpd/conf.d-icons.conf
@@ -5,14 +5,40 @@
     ServerAdmin admin@icons.northern-lights.one
     ServerName icons
     ServerAlias icons.northern-lights.one
-    DocumentRoot "/var/www/icons"
-    Alias "/" "/usr/share/icons"
 
-    <Directory "/var/www/icons">
-        Options Indexes FollowSymLinks Includes
-        AllowOverride All
+    # mapping directory /usr/share/icons into /, 
+    # which in our case is the DocumentRoot (/var/www/icons) 
+    DocumentRoot "/var/www/icons"
+    Alias "/icons" "/usr/share/icons"
+
+    # manage access
+    <Directory "/usr/share/icons">
+
+        # adding "multiviews" <-- unsure what that does
+        # Automatic index generation is enabled with +Indexes
+        Options +Indexes +FollowSymLinks  
+        # +FollowSymLinks +MultiViews +Includes
+        Require all granted
+
+        # control .htacess file behaviour / effects
+        AllowOverride None
+        # documentation says:
+        # Vor der Rücksendung des Dokuments wird der Server .acl einlesen, solange diese nicht mit
+        # AllowOverride None deaktiviert wurden.
+
+        # these are required for access outside of the document root
+        # need to explicitly permit access to the target directory.
+
         Order allow,deny
         Allow from all
+
+        # logLevel:
+        # Values:
+        # emerg, alert, crit, error, warn, notice, info, debug, trace1, trace2, trace3, tracr4, trace5, trace6, trace7, trace8
+        LogLevel trace8
+
+        # something for fancy displaying of shit
+        IndexOptions HTMLTable SuppressColumnsorting
     </Directory>
     ErrorLog /var/log/httpd/icons-error_log
    CustomLog /var/log/httpd/icons-access_log combined
