--- a/_httpd/conf.d-docs-psql.conf
+++ b/_httpd/conf.d-docs-psql.conf
@@ -1,20 +1,24 @@
 
-# icons
+# docs
 
-<VirtualHost icons.northern-lights.one:80>
-    ServerAdmin admin@icons.northern-lights.one
-    ServerName icons
-    ServerAlias icons.northern-lights.one
+<VirtualHost docs.northern-lights.one:80>
+    ServerAdmin admin@docs.northern-lights.one
+    ServerName docs
+    ServerAlias docs.northern-lights.one
 
-    # mapping directory /usr/share/icons into /, 
-    # which in our case is the DocumentRoot (/var/www/icons) 
-    DocumentRoot "/var/www/icons"
-    Alias "/icons" "/usr/share/icons"
+    # mapping directory /usr/share/docs into /, 
+    # which in our case is the DocumentRoot (/var/www/docs)
+    # ^
+    # this does NOT work. if you map into "/icons" it works. but not "/"
+
+    DocumentRoot "/var/www/docs"
+
+    # postgresql documentation
+    Alias "/psql" "/usr/share/doc/postgresql-docs/html"
 
     # manage access
-    <Directory "/usr/share/icons">
+    <Directory "/usr/share/doc/postgresql-docs/html">
 
-        # adding "multiviews" <-- unsure what that does
         # Automatic index generation is enabled with +Indexes
         Options +Indexes +FollowSymLinks  
         # +FollowSymLinks +MultiViews +Includes
@@ -22,7 +26,7 @@
 
         # control .htacess file behaviour / effects
         AllowOverride None
-        # documentation says:
+        # docs says:
         # Vor der Rücksendung des Dokuments wird der Server .acl einlesen, solange diese nicht mit
         # AllowOverride None deaktiviert wurden.
 
@@ -37,10 +41,10 @@
         # emerg, alert, crit, error, warn, notice, info, debug, trace1, trace2, trace3, tracr4, trace5, trace6, trace7, trace8
         LogLevel trace8
 
-        # something for fancy displaying of shit
-        IndexOptions HTMLTable SuppressColumnsorting
     </Directory>
-    ErrorLog /var/log/httpd/icons-error_log
-   CustomLog /var/log/httpd/icons-access_log combined
+    
+
+    ErrorLog /var/log/httpd/docs-psql-error_log
+    CustomLog /var/log/httpd/docs-psql-access_log combined
 </VirtualHost>
 
