--- a/_httpd/conf.d-docs-icons.conf
+++ b/_httpd/conf.d-docs-icons.conf
@@ -1,15 +1,19 @@
 
 # icons
 
-<VirtualHost docs.northern-lights.one:80>
+<VirtualHost *:80>
     ServerAdmin admin@docs.northern-lights.one
     ServerName docs
     ServerAlias docs.northern-lights.one
 
+    # creating a default document root
+    # mapping the alias icons to the directory tree outside of the document root
+    # simply putting "/" as an alias does not work!
+
     DocumentRoot "/var/www/docs"
     Alias "/icons" "/usr/share/icons"
 
-    # manage access
+    # manage access to directory outside of the document root
     <Directory "/usr/share/icons">
 
         # Automatic index generation is enabled with +Indexes
@@ -26,6 +30,7 @@
         # these are required for access outside of the document root
         # need to explicitly permit access to the target directory.
 
+        # to deliver a directory tree, these options need to be given:
         Order allow,deny
         Allow from all
 
@@ -35,7 +40,10 @@
         LogLevel trace8
 
         # something for fancy displaying of shit
-        IndexOptions HTMLTable SuppressColumnsorting
+        IndexOptions HTMLTable
+
+        # uncommenting this one 
+        # SuppressColumnsorting
     </Directory>
 
     ErrorLog /var/log/httpd/docs-icons-error_log
