--- a/_httpd/conf.d-docs-psql.conf
+++ b/_httpd/conf.d-docs-psql.conf
@@ -19,6 +19,9 @@
     # manage access
     <Directory "/usr/share/doc/postgresql-docs/html">
 
+        # use the provided index file
+        DirectoryIndex index.html
+
         # Automatic index generation is enabled with +Indexes
         Options +Indexes +FollowSymLinks  
         # +FollowSymLinks +MultiViews +Includes
@@ -43,7 +46,6 @@
 
     </Directory>
     
-
     ErrorLog /var/log/httpd/docs-psql-error_log
     CustomLog /var/log/httpd/docs-psql-access_log combined
 </VirtualHost>
