added the includes example

--- a/_httpd/conf.d-docs.conf
+++ b/_httpd/conf.d-docs.conf
@@ -38,9 +38,6 @@
         Order allow,deny
         Allow from all
 
-        # logLevel:
-        LogLevel trace8
-
     </Directory>
 
     # icons    
@@ -62,15 +59,36 @@
         Order allow,deny
         Allow from all
 
-        # logLevel:
-        LogLevel trace8
-
         # something for fancy displaying of shit
         IndexOptions HTMLTable
 
         # uncommenting this one 
         # SuppressColumnsorting
     </Directory>
+
+    # includes    
+    Alias "/includes" "/var/www/docs/includes"
+    # manage access
+    <Directory "/var/www/docs/includes">
+
+        # use the provided index file
+        DirectoryIndex includes.html
+
+        # allow includes
+        Options +Includes  
+
+        # we mus declare which files to process? 
+        AddType text/html .html
+        AddHandler server-parsed .html
+
+        # control .htacess file behaviour / effects
+        AllowOverride All
+        Allow from all
+
+    </Directory>
+
+    # logLevel:
+    LogLevel trace8
 
     ErrorLog /var/log/httpd/docs_error_log
     CustomLog /var/log/httpd/docs_access_log combined
