--- a/_httpd/mod_include.conf
+++ b/_httpd/mod_include.conf
@@ -1,16 +1,5 @@
-# includes
-
-<VirtualHost *:80>
-    ServerName includes
-    ServerAlias includes.northern-lights.one
-
-    # mapping directory /usr/share/docs into /, 
-    # which in our case is the DocumentRoot (/var/www/docs)
-    # ^
-    # this does NOT work. if you map into "/icons" it works. but not "/"
-
-    DocumentRoot "/var/www/docs/includes"
-
+    # includes    
+    Alias "/includes" "/var/www/docs/includes"
     # manage access
     <Directory "/var/www/docs/includes">
 
@@ -32,8 +21,4 @@
         LogLevel trace8
 
     </Directory>
-    
-    ErrorLog /var/log/httpd/includes_error_log
-    CustomLog /var/log/httpd/includes_access_log combined
-</VirtualHost>
 
